[package]
name = "hat-changer"
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
description = "An extremely lightweight time tracking tool for work."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
go-parse-duration = "0.1.1"
homedir = "0.2.1"
pretty-duration = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.59"
